<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        style="?attr/toolbarStyle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="false"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <ProgressBar
            android:id="@+id/locationLoading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/locationTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="현재 위치"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="false"
        app:tabMaxWidth="0dp"
        app:tabMode="auto" />

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/orderChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/viewPager"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:singleLine="true"
            app:singleSelection="true"
            app:checkedChip="@id/chipDefault"
            android:paddingHorizontal="12dp"
            app:selectionRequired="true"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInitialize"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initialize"
                app:chipIconEnabled="true"
                app:chipIcon="@drawable/ic_refresh"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFastDelivery"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_delivery"
                app:chipIcon="@drawable/ic_thunder"
                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_fast"
                app:chipIconEnabled="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDeliveryTip"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_delivery_tip"
                app:chipIcon="@drawable/ic_down"
                app:chipIconTint="@color/icon_filter_chip_state_list_low_delivery_tip"
                app:chipIconEnabled="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDefault"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_order"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopRate"
                style="@style/Widget.Aoppart6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rate"
                app:chipIcon="@drawable/ic_star"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray_168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filterScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/basketButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basketButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_basket"
            app:tint="@color/white"
            android:contentDescription="basketButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="24dp"/>

        <TextView
            android:id="@+id/basketCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/basketButton"
            app:layout_constraintTop_toTopOf="@id/basketButton"
            app:layout_constraintBottom_toBottomOf="@id/basketButton"
            app:layout_constraintStart_toStartOf="@id/basketButton"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.8"
            tools:text="+1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:elevation="16dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
